--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: prom/alertmanager:latest
     cpu_percent: 5
     mem_limit: 500m
+    networks:
+      - default-network
     mem_reservation: 100m
     ports:
       - 9093:9093
