Add autoResolve interval for the libra-watchdog

--- a/alertmanager_webhook_proxy/config/config.json
+++ b/alertmanager_webhook_proxy/config/config.json
@@ -10,6 +10,7 @@
       "daySilenceIntervalFinish":"20:00",
       "autoResolve":{
         "enabled":true,
+        "interval":"16m"
       },
       "sendResolved":false
     }
