--- a/alertmanager_webhook_proxy/package.json
+++ b/alertmanager_webhook_proxy/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "moment": "^2.24.0",
     "request": "^2.88.0",
     "winston": "^3.2.1"
