--- a/alertmanager_webhook_proxy/config/config.json
+++ b/alertmanager_webhook_proxy/config/config.json
@@ -1,8 +1,11 @@
 [  {
     "name":"test",
     "rules":{
+      "initialSilence":{
+        "enabled": true,
+        "interval": "6m"
+      },
       "repeat": {
-        "initialSilence": "1m30s",
         "daySilenceInterval": "2m",
         "nightSilenceInterval": "2m"
       },
@@ -30,7 +33,8 @@
     "name":"stablecoin-watchdog-norepeat",
     "rules":{
       "initialSilence":{
-        "enabled": false
+        "enabled": true,
+        "interval": "6m"
       },
       "autoResolve":{
         "enabled":false
@@ -45,7 +49,8 @@
     "name":"stablecoin-watchdog-low",
     "rules":{
       "initialSilence":{
-        "enabled": false
+        "enabled": true,
+        "interval": "6m"
       },
       "autoResolve":{
         "enabled":false
@@ -61,7 +66,8 @@
     "name":"stablecoin-watchdog-mid",
     "rules":{
       "initialSilence":{
-        "enabled": false
+        "enabled": true,
+        "interval": "6m"
       },
       "autoResolve":{
         "enabled":false
@@ -77,7 +83,8 @@
     "name":"stablecoin-watchdog-high",
     "rules":{
       "initialSilence":{
-        "enabled": false
+        "enabled": true,
+        "interval": "6m"
       },
       "autoResolve":{
         "enabled":false
