--- a/local/alertmanager/alertmanager.yml
+++ b/local/alertmanager/alertmanager.yml
@@ -60,4 +60,4 @@ receivers:
 - name: 'alertmananger-bot'
   webhook_configs:
   - send_resolved: true
-    url: 'http://192.168.1.104:3000/webhook'
+    url: 'http://alertmanager-webhook-proxy:3000/webhook'
