Enable send resolve for the libra-watchdog

--- a/alertmanager_webhook_proxy/config/config.json
+++ b/alertmanager_webhook_proxy/config/config.json
@@ -26,7 +26,8 @@
       "autoResolve":{
         "enabled":true,
         "interval":"11m"
-      }
+      },
+      "sendResolved": true
     }
   },
   {
